source-sass/app.scss
// =======================================
// Foundation
// =======================================
@import "settings";
@import "animate";
@import "source/bower_components/foundation/scss/normalize.scss";
@import "source/bower_components/foundation/scss/foundation.scss";


// =======================================
// Vars
// =======================================

$dark-blue: #161f29;
$dirty-blue: #7fa5c1;
$juicy-blue: #3a9ae2;

$grey: #65768a;
$off-white: #c2d2de;

$orange: #ff7b22;
$light-orange: #ff9b58;
$juicy-orange: #ff4e15;

$header-font: Anton, Impact, "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;


// =======================================
// Now on to the other bits
// =======================================

.button {
  // -webkit-clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
  // clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
  -webkit-clip-path: polygon(50% 0%, 100% 15%, 100% 85%, 50% 100%, 0% 85%, 0% 15%);
          clip-path: polygon(50% 0%, 100% 15%, 100% 85%, 50% 100%, 0% 85%, 0% 15%);
  outline: 0;

  &:focus,
  &:active {
    outline: 0;
  }
}

// TODO
.js #preloader {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 999;
  width: 100%;
  height: 100%;
  overflow: visible;
  text-align: center;
  vertical-align: middle;
  // background: url(http://files.mimoymima.com/images/loading.gif) no-repeat center center, rgba($dark-blue, 0.98);
  background: url(/media/destruction-5.jpg) center center no-repeat, $dark-blue !important;
  background-size: cover !important;

  h1 {
    margin-top: 10rem;
    color: #fff;
  }
}

.blink {
  animation-name: blink;
  animation-duration: 2s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

@keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}


// body {
//   background: url(../images/hero-map.svg) no-repeat;
//   background-attachment: fixed;
//   background-size: cover;
// }

body {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;

  * {
    box-sizing: border-box;
  }
}

h1 {
  font-size: 2.5em;
  font-family: $header-font;
  text-transform: uppercase;
  line-height: 1;
  color: $juicy-orange;

  @media #{$medium-up} {
    font-size: 4.25em;
  }

  @media #{$medium-up} {
    font-size: 5.25em;
  }
}

h2 {
  font-weight: 500;
  font-size: 1.5em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 2.25em;
  }

  @media #{$large-up} {
    font-size: 2.875em;
  }
}

p {
  font-size: 1em;
  color: #96acbd;
  color: #8c949e;

  @media #{$medium-up} {
    font-size: 1.125em;
  }

  @media #{$large-up} {
    font-size: 1.275em;
  }
}

h4 {
  color: #8c949e;
}

bold {
  font-weight: 500;
}



section {
  min-height: 100%;
  position: relative;
  padding: 1.5rem 0;

  &:after {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    // background: linear-gradient(to bottom, #10161c 10%, rgba(#10161c, 0.8) 30%);
    background: rgba(#10161c, 0.9);
  }

  * {
    position: relative;
    z-index: 5;
  }

  @media #{$medium-up} {
    padding: 3.5rem 0;
  }

  @media #{$large-up} {
    padding: 6.5rem 0;
  }
}

section:not(.hero) {
  position: relative;
  // min-height: 100%;
  // height: 100%;
  // height: 1000px;
  padding: 3rem 0 0;
  // background: url(../images/hero-map.svg) center 45% no-repeat;
  // background-size: 100%;
  // background: none;

  @media #{$medium-up} {
    padding: 6rem 0 0;
  }

  @media #{$large-up} {
    padding: 12rem 0 0;
  }
}


// .fixed-header {
//   width: 100%;
//   overflow: hidden;
//   min-height: 100%;
//   // height: 100%;
//   height: 1332px;
//   padding: 0;
//   // background: url(../images/hero-map.svg) right top no-repeat;
//   background-size: cover;
//   position: fixed;
// }


.hero {
  min-height: 100%;
  height: 100%;
  // background: url(/media/destruction-5.jpg) center center no-repeat, $dark-blue !important;
  // background-size: cover !important;

  &:after {
    background-image: linear-gradient(to bottom, rgba($dark-blue, 0.6) 50%, $dark-blue 100%);
    opacity: 0.7;
    // display: none;
  }

  h1 {
    margin-top: 30vh;
    margin-bottom: 7vh;
    line-height: 1;
    // color: #888;
    color: #fff;
    text-shadow: 0 0 15px rgba($dark-blue, 0.75);

    @media #{$medium-up} {
      margin-top: 21vh;
    }

    strong {
      // color: #fff;
      font-weight: 400;
    }
  }

  h2 {
    margin-top: 2rem;
    color: #fff;

    @media #{$medium-up} {
      margin-top: 4.5rem;
    }

    @media #{$large-up} {
      margin-top: 7rem;
    }
  }

  h3 {
    color: rgba(255, 255, 255, 0.5);
    font-weight: 300;

    @media #{$medium-up} {
      margin-top: 0.75rem;
    }

    @media #{$large-up} {
      margin-top: 1.5rem;
    }
  }

  p {
    margin-top: 1.25rem;
    margin-bottom: 2.5rem;
    color: #777;

    img {
      display: inline-block;
      opacity: 0.3;
    }
  }
}

.title-logo {
  display: block;
  width: 180px;
  margin: -4rem auto 0;
  // position: absolute;
  // top: 1.5rem;
  text-align: center;

  img {
    width: 150px;
    opacity: 0.5;
  }

  &:hover {
    opacity: 1;
  }
}

.credit-logo {
  position: absolute;
  // width: 13%;
  width: 150px;
  opacity: 0.25;
  // -webkit-filter: grayscale(100%);
          // filter: grayscale(100%);
}

.credit-logo--left {
  width: 175px;
  top: 3.15rem;
  left: 3rem;
}

.credit-logo--right {
  top: 2rem;
  right: 3rem;
}

.js-animate-risk,
.js-animate-subduction,
.js-animate-earthquake,
.js-animate-subduction-labels {
  visibility: hidden;

  &.animated {
    visibility: visible;
  }
}

.loading-indicator-location {
  display: none;
  position: absolute;
  bottom: 10px;
  left: 15px;
  margin-bottom: -6px;
  margin-top: 0px;
  background: url(../images/loading.gif) 3px 4px no-repeat;
  background-size: 10px 10px;
  padding-left: 16px;
  opacity: 0.65;
  font-size: 12px;
}

.alert-box {
  display: none;
}
/* ... */

